@@ -3,9 +3,8 @@ package gov.cms.bfd.server.war.r4.providers.preadj;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.rest.client.api.IGenericClient;
 import ca.uhn.fhir.rest.param.DateParam;
+import ca.uhn.fhir.rest.param.NumberParam;
 import ca.uhn.fhir.rest.param.ReferenceParam;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import gov.cms.bfd.server.war.ServerTestUtils;
 import gov.cms.bfd.server.war.utils.AssertUtils;
 import gov.cms.bfd.server.war.utils.RDATestUtils;
@@ -13,6 +12,8 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import org.hl7.fhir.r4.model.Bundle;
 import org.hl7.fhir.r4.model.ClaimResponse;
@@ -25,7 +26,7 @@ public class R4ClaimResponseResourceProviderIT {
   private static final RDATestUtils testUtils = new RDATestUtils();
 
   private static final Set<String> IGNORE_PATTERNS =
-      ImmutableSet.of("\"/link/[0-9]+/url\"", "\"/created\"", "\"/meta/lastUpdated\"");
+      Set.of("\"/link/[0-9]+/url\"", "\"/created\"", "\"/meta/lastUpdated\"");
 
   @BeforeAll
   public static void init() {
@@ -39,6 +40,10 @@ public class R4ClaimResponseResourceProviderIT {
     testUtils.destroy();
   }
 
+  /**
+   * Tests to see if the correct response is given when a FISS {@link ClaimResponse} is looked up by
+   * a specific ID
+   */
   @Test
   void shouldGetCorrectFissClaimResponseResourceById() {
     IGenericClient fhirClient = ServerTestUtils.get().createFhirClientV2();
@@ -52,6 +57,10 @@ public class R4ClaimResponseResourceProviderIT {
     AssertUtils.assertJsonEquals(expected, actual, IGNORE_PATTERNS);
   }
 
+  /**
+   * Tests to see if the correct response is given when an MCS {@link ClaimResponse} is looked up by
+   * a specific ID
+   */
   @Test
   void shouldGetCorrectMcsClaimResponseResourceById() {
     IGenericClient fhirClient = ServerTestUtils.get().createFhirClientV2();
@@ -65,6 +74,10 @@ public class R4ClaimResponseResourceProviderIT {
     AssertUtils.assertJsonEquals(expected, actual, IGNORE_PATTERNS);
   }
 
+  /**
+   * Tests to see if the correct response is given when a search is done for {@link ClaimResponse}s
+   * using given mbi and service-date range
+   */
   @Test
   void shouldGetCorrectClaimResponseResourcesByMbiHash() {
     IGenericClient fhirClient = ServerTestUtils.get().createFhirClientV2();
@@ -74,7 +87,7 @@ public class R4ClaimResponseResourceProviderIT {
             .search()
             .forResource(ClaimResponse.class)
             .where(
-                ImmutableMap.of(
+                Map.of(
                     "mbi", Collections.singletonList(new ReferenceParam(RDATestUtils.MBI_OLD_HASH)),
                     "service-date",
                         Arrays.asList(
@@ -86,6 +99,44 @@ public class R4ClaimResponseResourceProviderIT {
     claimResult.getEntry().sort(Comparator.comparing(a -> a.getResource().getId()));
 
     String expected = testUtils.expectedResponseFor("claimResponseSearch");
+    String actual = FhirContext.forR4().newJsonParser().encodeResourceToString(claimResult);
+
+    Set<String> ignorePatterns = new HashSet<>(IGNORE_PATTERNS);
+    ignorePatterns.add("\"/id\"");
+    ignorePatterns.add("\"/entry/[0-9]+/resource/created\"");
+
+    AssertUtils.assertJsonEquals(expected, actual, ignorePatterns);
+  }
+
+  /**
+   * Tests to see if the correct paginated response is given when a search is done for {@link
+   * ClaimResponse}s using given mbi and service-date range
+   */
+  @Test
+  void shouldGetCorrectClaimResponseResourcesByMbiHashWithPagination() {
+    IGenericClient fhirClient = ServerTestUtils.get().createFhirClientV2();
+
+    Bundle claimResult =
+        fhirClient
+            .search()
+            .forResource(ClaimResponse.class)
+            .where(
+                Map.of(
+                    "mbi",
+                    Collections.singletonList(new ReferenceParam(RDATestUtils.MBI_OLD_HASH)),
+                    "service-date",
+                    Arrays.asList(new DateParam("gt1970-07-18"), new DateParam("lt1970-07-30")),
+                    "_count",
+                    List.of(new NumberParam("5")),
+                    "startIndex",
+                    List.of(new NumberParam("1"))))
+            .returnBundle(Bundle.class)
+            .execute();
+
+    // Sort entries for consistent testing results
+    claimResult.getEntry().sort(Comparator.comparing(a -> a.getResource().getId()));
+
+    String expected = testUtils.expectedResponseFor("claimResponseSearchPaginated");
     String actual = FhirContext.forR4().newJsonParser().encodeResourceToString(claimResult);
 
     Set<String> ignorePatterns = new HashSet<>(IGNORE_PATTERNS);
